--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "sass": "^1.32.8",
     "swr": "^0.5.5",
     "tailwindcss": "^2.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
